# ferrox

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml
.github/workflows/: ci.yml
crates/datalink/: Cargo.toml
crates/datalink/src/: cache.rs  lib.rs  messages.rs
crates/datalink/tests/: integration.rs
crates/ferrox-cli/: Cargo.toml
crates/ferrox-cli/src/: main.rs
crates/network/: Cargo.toml
crates/pal/: Cargo.toml
crates/pal/src/: lib.rs
crates/proto/: Cargo.toml
crates/proto/src/: arp.rs  checksum.rs  ethernet.rs  icmp.rs  iface.rs  ipv4.rs  lib.rs  txbuf.rs
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs
crates/socket/: Cargo.toml
crates/transport/: Cargo.toml
