[workspace]
members = ["crates/*"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
thiserror = "2"
zerocopy = { version = "0.8.47", features = ["derive"] }
tokio = { version = "1.5", default-features = false, features = ["rt", "sync", "macros", "rt-multi-thread"] }
tokio-util = "0.7"
bytes = "1"
tracing = "0.1"
