[package]
name = "datalink"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
zerocopy = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
lru = "0.16"

proto = { path = "../proto" }

[dev-dependencies]
sim = { path = "../sim" }
tokio = { workspace = true, features = ["time"] }
