[package]
name = "ferrox-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0"
tracing-subscriber = "0.3"

proto = { path = "../proto" }
pal = { path = "../pal"}
datalink = { path = "../datalink" }
